Fully port away from Q_FOREACH

BUG: 456975